--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 window.onload = (function() { getJSONP('https://www.RzhuNeMogu.ru/Widzh/WidzhRNM.aspx?type=1', onSuccess); });
 function onSuccess(response) { document.getElementById("result_1").innerHTML = response.result; }
 </script>
-<div id="result_1" onclick="getJSONP('http://www.RzhuNeMogu.ru/Widzh/WidzhRNM.aspx?type=1',onSuccess)">
+<div id="result_1" onclick="getJSONP('https://www.RzhuNeMogu.ru/Widzh/WidzhRNM.aspx?type=1',onSuccess)">
 </div>
 </body>
 </html>
